Fix z-index of sidebar (#23)
This will prevent the URL bar popup from being under the sidebar on some window
sizes.

Fixes #22

--- a/userChrome.css
+++ b/userChrome.css
@@ -129,6 +129,11 @@
 #browser {
     position: relative;
 }
+
+#sidebar-box[sidebarcommand*="tabcenter"] {
+    z-index: 1;
+}
+
 #sidebar-box[sidebarcommand*="tabcenter"] #sidebar-header {
     visibility: collapse;
     display: none;
